--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,4 @@
-NEXT_PUBLIC_API_URL=https://openai-chat-opal.vercel.app
-OPENAI_KEY=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
+NEXT_PUBLIC_API_URL=https://chatgptnz3.fly.dev
+OPENAI_KEY=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
 PINECONE_KEY=6acb04cc-c2e2-47ef-863a-3f0bfec7cd5a
+CRAWLEE_STORAGE_DIR=/tmpfs
