--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.21",
     "mammoth": "^1.5.1",
     "next": "13.3.0",
+    "next-auth": "^4.22.1",
     "nextjs-cors": "^2.1.2",
     "node-html-markdown": "^1.3.0",
     "openai": "^3.2.1",
